...
                let errorView = ErrorView(error: genresError)
                errorView.delegate = self
                self.movieGridCollectionView.addSubview(errorView)
            }else{
                if let array = response?.genres {
                    self.genres = array
                    if let favorites = self.tabBarController?.viewControllers?[1] as? FavoriteMoviesViewController{
                        favorites.genres = array
                    }
                    let params = ["api_key":network.apiKey,"page":self.currentPage,"language":self.locale ?? "en-US"] as [String : Any]
                    
                    network.request(urlString: MoviesAPIUrl.popularMovies, params: params){
                        (response: GenericPagedMovieResponse?, error: ErrorTypes?) in
...
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        popularSearchController.searchBar.autocapitalizationType = .none
        self.tabBarController?.navigationItem.searchController = popularSearchController
        self.tabBarController?.navigationItem.hidesSearchBarWhenScrolling = false
        self.tabBarController?.navigationItem.title = "Movies"
        setUpInitialMovies()
        
    }
    
    override func viewDidAppear(_ animated: Bool) {
        self.tabBarController?.navigationItem.hidesSearchBarWhenScrolling = true
...
