...
                            <constraint firstItem="n97-qx-MUn" firstAttribute="top" secondItem="K1X-Kq-mOY" secondAttribute="bottom" constant="48" id="s8c-zk-ZpB"/>
                            <constraint firstItem="K1X-Kq-mOY" firstAttribute="top" secondItem="OJA-1p-UPE" secondAttribute="top" constant="5" id="tua-pW-PPm"/>
                            <constraint firstItem="n97-qx-MUn" firstAttribute="bottom" secondItem="OJA-1p-UPE" secondAttribute="bottom" id="vyh-vL-LxO"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Movies" id="dWB-2a-B2N">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="Filter" id="02e-dx-pb7">
                            <connections>
                                <segue destination="WrE-Zx-uFT" kind="show" identifier="SegueFilter" id="JP9-VQ-o4x"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KME-YD-WBD">
                                <rect key="frame" x="20" y="714" width="374" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="16n-RA-WZS"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Apply">
                                    <backgroundConfiguration key="background">
                                        <color key="backgroundColor" name="ColorMVYellowLight"/>
                                    </backgroundConfiguration>
                                    <color key="baseForegroundColor" systemColor="labelColor"/>
                                </buttonConfiguration>
                                <connections>
...
